0.1.1 (Jan 3, 2010)

* Speeding up play speed a little

* Ticking captive explosion now kills everything on the floor, adjusting level 6 to compensate

* Adding intermediate level 7

* Keep track of last level played in profile and go back to normal mode when level is added


0.1.0 (Jan 2, 2010)

* initial release