@@ -2,13 +2,13 @@ module RubyWarrior
   module Abilities
     class Attack < Base
       def description
-        "Attack the unit in given direction (forward by default)."
+        "Attacks a unit in given direction (forward by default)."
       end
       
       def perform(direction = :forward)
         receiver = unit(direction)
         if receiver
-          @unit.say "attacks #{receiver}"
+          @unit.say "attacks #{direction} and hits #{receiver}"
           if direction == :backward
             power = (@unit.attack_power/2.0).ceil
           else
@@ -16,7 +16,7 @@ module RubyWarrior
           end
           damage(receiver, power)
         else
-          @unit.say "attacks and hits nothing"
+          @unit.say "attacks #{direction} and hits nothing"
         end
       end
     end
