@@ -2,16 +2,16 @@ module RubyWarrior
   module Abilities
     class Bind < Base
       def description
-        "Bind unit in given direction to keep him from moving (forward by default)."
+        "Binds a unit in given direction to keep him from moving (forward by default)."
       end
       
       def perform(direction = :forward)
         receiver = unit(direction)
         if receiver
-          @unit.say "binds #{receiver}"
+          @unit.say "binds #{direction} and restricts #{receiver}"
           receiver.bind
         else
-          @unit.say "binds nothing"
+          @unit.say "binds #{direction} and restricts nothing"
         end
       end
     end
